--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Programming Language :: Python :: 3.9
     Topic :: Internet
+include_package_data=True
 
 [options]
 packages = tsetmc
@@ -22,5 +23,3 @@ install_requires = requests; jdatetime; pandas>=1.3; numpy
 python_requires = >=3.9
 tests_require = pytest
 
-[options.package_data]
-tsetmc = database/ids.json
