--- a/setup.cfg
+++ b/setup.cfg
@@ -21,4 +21,6 @@ zip_safe = False
 install_requires = requests; jdatetime; pandas>=1.3; numpy
 python_requires = >=3.9
 tests_require = pytest
-include_package_data=True
+
+[options.package_data]
+tsetmc = database/ids.json
