--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ classifiers =
     Topic :: Internet
 
 [options]
-packages = tsetmc
+packages = find:
 zip_safe = False
 install_requires = requests; jdatetime; pandas>=1.3; numpy
 python_requires = >=3.9
