fix(setup.cfg)!: require lxml and bs4
pandas.read_html requires them and believe it fails with an error
if they are not installed.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,14 @@ classifiers =
 [options]
 packages = find:
 zip_safe = False
-install_requires = requests; jdatetime; pandas>=1.3; numpy
+install_requires =
+    requests
+    jdatetime
+    pandas>=1.3
+    numpy
+    # https://pandas.pydata.org/docs/getting_started/install.html#html
+    beautifulsoup4
+    lxml
 python_requires = >=3.10
 tests_require = pytest
 
