chore(introduction)!: use Series.str.removesuffix

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ zip_safe = False
 install_requires =
     requests
     jdatetime
-    # required for running tests
+    # required for running tests and using Series.str.removesuffix
     pandas>=1.4.0
     numpy
     # https://pandas.pydata.org/docs/getting_started/install.html#html
