feat: migrate from requests to urllib3
requests has bug in managing session:
https://github.com/psf/requests/issues/6064

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
 packages = find:
 zip_safe = False
 install_requires =
-    requests
+    urllib3
     jdatetime
     # required for running tests and using Series.str.removesuffix
     pandas>=1.4.0
