chore(setup.cfg): avoid the deprecated tests_require param

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,10 @@ install_requires =
     beautifulsoup4
     lxml
 python_requires = >=3.10
-tests_require = pytest
+
+[options.extras_require]
+test =
+    pytest
 
 [options.package_data]
 tsetmc = database/ids.json
