--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
 packages = find:
 zip_safe = False
 install_requires =
-    urllib3
+    httpx
     jdatetime
     # required for running tests and using Series.str.removesuffix
     pandas>=1.4.0
