--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ python_requires = >=3.10
 test =
     pytest
     pytest-asyncio
+    python-dotenv
 
 [options.package_data]
 tsetmc = database/ids.json
