--- a/setup.cfg
+++ b/setup.cfg
@@ -29,9 +29,7 @@ python_requires = >=3.10
 
 [options.extras_require]
 test =
-    pytest
-    pytest-asyncio
-    python-dotenv
+    aiohttp_test_utils
 
 [options.package_data]
 tsetmc = dataset/dataset.csv
