--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,68 @@
 [build-system]
 requires = [
-    # 46.4.0 is required for handling attr version, see:
-    # https://packaging.python.org/guides/single-sourcing-package-version/
-    "setuptools>=46.4.0",
-    "wheel"
+    "setuptools>=66.1.0",
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "tsetmc"
+authors = [
+    { name = "5j9", email = "5j9@users.noreply.github.com" },
+]
+description = "a library to retrieve data from tsetmc.com website"
+keywords = [
+    "tsetmc",
+    "client",
+]
+classifiers = [
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Programming Language :: Python :: 3.10",
+]
+requires-python = ">=3.10"
+dependencies = [
+    "aiohttp[speedups]",
+    "jdatetime",
+    "pandas>=1.4.0",
+    "numpy",
+    "beautifulsoup4",
+    "lxml",
+]
+dynamic = [
+    "version",
+]
+
+[project.license]
+text = "GNU General Public License v3 (GPLv3)"
+
+[project.readme]
+file = "README.rst"
+content-type = "text/x-rst"
+
+[project.urls]
+Homepage = "https://github.com/5j9/tsetmc"
+
+[project.optional-dependencies]
+test = [
+    "aiohttp_test_utils",
+]
+
+[tool.setuptools]
+zip-safe = false
+include-package-data = false
+
+[tool.setuptools.packages.find]
+namespaces = false
+
+[tool.setuptools.package-data]
+tsetmc = [
+    "dataset/dataset.csv",
+]
+
+[tool.setuptools.dynamic.version]
+attr = "tsetmc.__version__"
+
+
+[tool.isort]
+profile = "black"
+line_length = 79
+combine_as_imports = true
