--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ Homepage = "https://github.com/5j9/tsetmc"
 [project.optional-dependencies]
 test = [
     "aiohttp_test_utils>=0.4.0",
+    "pydantic",
 ]
 
 [tool.setuptools]
