--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
 ]
 requires-python = ">=3.10"
+dynamic = [
+    "version",
+]
 dependencies = [
     "jdatetime",
     "pandas>=2.0.0",
@@ -27,8 +30,9 @@ dependencies = [
     "lxml",
     "aiohutils>=0.9.2",
 ]
-dynamic = [
-    "version",
+[project.optional-dependencies]
+test = [
+    "aiohutils[test]",
 ]
 
 [project.license]
