--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,15 +24,15 @@ dynamic = [
 ]
 dependencies = [
     "jdatetime",
-    "pandas>=2.0.0",
+    "pandas >= 2.0.0",
     "numpy",
     "beautifulsoup4",
     "lxml",
-    "aiohutils>=0.9.2",
+    "aiohutils >= 0.9.2",
 ]
 [project.optional-dependencies]
 test = [
-    "aiohutils[test]",
+    "aiohutils[test] >= 0.9.2",
 ]
 
 [project.license]
