chore: use ruff format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,8 +61,7 @@ tsetmc = [
 [tool.setuptools.dynamic.version]
 attr = "tsetmc.__version__"
 
-
-[tool.isort]
-profile = "black"
-line_length = 79
-combine_as_imports = true
+[tool.ruff]
+format.quote-style = 'single'
+line-length = 79
+isort.combine-as-imports = true
