--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "aiohutils >= 0.11.0",
+    "aiohutils >= 0.12.0",
     "beautifulsoup4",
     "jdatetime",
     "lxml",
@@ -33,7 +33,7 @@ dependencies = [
 ]
 [project.optional-dependencies]
 test = [
-    "aiohutils[test] >= 0.11.0",
+    "aiohutils[test] >= 0.12.0",
 ]
 
 [project.license]
@@ -71,8 +71,9 @@ extend-select = [
 ]
 ignore = [
     'UP027',  # list comprehensions are faster than generator expressions
+    'E721',  # Do not compare types, use `isinstance()`; I know what I'm doing.
 ]
 
 [tool.pytest.ini_options]
 addopts = '--quiet --tb=short'
-asyncio_mode = 'auto'
+
