--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,10 @@
 requires = [
     "setuptools>=66.1.0",
 ]
-build-backend = "setuptools.build_meta"
+
+[build-system.build-backend]
+requires = ['flit_core >=3.2,<4']
+build-backend = 'flit_core.buildapi'
 
 [project]
 name = "tsetmc"
@@ -46,21 +49,6 @@ content-type = "text/x-rst"
 [project.urls]
 Homepage = "https://github.com/5j9/tsetmc"
 
-[tool.setuptools]
-zip-safe = false
-include-package-data = false
-
-[tool.setuptools.packages.find]
-namespaces = false
-
-[tool.setuptools.package-data]
-tsetmc = [
-    "dataset/dataset.csv",
-]
-
-[tool.setuptools.dynamic.version]
-attr = "tsetmc.__version__"
-
 [tool.ruff]
 line-length = 79
 format.quote-style = 'single'
@@ -76,4 +64,3 @@ ignore = [
 
 [tool.pytest.ini_options]
 addopts = '--quiet --tb=short'
-
