update ruff settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,9 +55,12 @@ lint.extend-select = [
     'FA',  # flake8-future-annotations
     'I',  # isort
     'UP',  # pyupgrade
+    'RUF', # Ruff-specific rules (RUF)
 ]
 lint.ignore = [
     'E721',  # Do not compare types, use `isinstance()`
+    'RUF001',  # ambiguous-unicode-character-string	
+    'RUF003',  # ambiguous-unicode-character-comment
 ]
 
 [tool.pytest.ini_options]
