--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [build-system]
-requires = ['flit_core >=3.2,<4']
-build-backend = 'flit_core.buildapi'
+requires = ['uv_build>=0.8.3,<0.9.0']
+build-backend = 'uv_build'
 
 [project]
 name = 'tsetmc'
+version = '0.70.1.dev0'
 authors = [
     { name = '5j9', email = '5j9@users.noreply.github.com' },
 ]
@@ -17,9 +18,6 @@ classifiers = [
     'Programming Language :: Python :: 3.12',
 ]
 requires-python = '>=3.12'
-dynamic = [
-    'version',
-]
 dependencies = [
     'aiohutils >= 0.20.0',
     'jdatetime',
@@ -39,9 +37,6 @@ content-type = 'text/x-rst'
 
 [project.urls]
 Homepage = 'https://github.com/5j9/tsetmc'
-
-[tool.flit.sdist]
-exclude = ['tests', 'dev', '.gitattributes', 'sample_scripts']
 
 [tool.ruff]
 line-length = 79
@@ -81,6 +76,9 @@ reportConstantRedefinition = 'error'
 reportTypeCommentUsage = 'warning'
 reportUnnecessaryComparison = 'warning'
 
+[tool.uv.build-backend]
+module-name = "tsetmc"
+module-root = ""
 [dependency-groups]
 dev = [
     "aiohutils[test]>=0.22.1",
