--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'uv_build'
 
 [project]
 name = 'tsetmc'
-version = "2.0.1.dev1"
+version = "2.0.1"
 authors = [
     { name = '5j9', email = '5j9@users.noreply.github.com' },
 ]
