--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'uv_build'
 
 [project]
 name = 'tsetmc'
-version = "3.0.1"
+version = "3.0.2.dev1"
 authors = [{ name = '5j9', email = '5j9@users.noreply.github.com' }]
 description = 'a library to retrieve data from tsetmc.com website'
 keywords = ['tsetmc', 'client']
